--- a/Desktop/primer sitio/ahora/sitio 5/index.html
+++ b/Desktop/primer sitio/ahora/sitio 5/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Vincent, vida y obra.
-  Un pequeño homenaje a un pintor deseo de obtención habilidad. Y si persevereacia y su deseos de crear lo llevaron a su ruina">
-  <meta name="keywords" content="vincent, obra, psicologia, cronología">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/animate.min.css"/>
-    <link rel="stylesheet" href="scss_scout/estilos.css">
-    <title>Artista Ilustrativo, vincent van gogh</title>
-</head>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="description" content="Vincent, vida y obra.
+      Un pequeño homenaje a un pintor deseo de obtención habilidad. Y si persevereacia y su deseos de crear lo llevaron a su ruina">
+      <meta name="keywords" content="vincent, obra, psicologia, cronología">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="scss_scout/estilos.css">
+      <title>Artista Ilustrativo, vincent van gogh</title>
+  </head>
 <body class="cuerpo">
-  <header class="cuerpoTitulo wow animate__animated animate__backInDown mx-auto text-center">
-          <h1>Vida y obra</h1>
-          <h2>vincent van gogh</h2>
-  </header>
-  <!--navegacion-->
+
+    <!--Titulo-->
+
+    <header class="cuerpoTitulo mx-auto text-center">
+            <h1>Vida y obra</h1>
+            <h2>vincent van gogh</h2>
+    </header>
+
+        <!--cuerpo contenedor-->
+
   <div class="cuerpoTotal container">
+
+      <!--Navegacion-->
+
           <nav class="cuerpoNav navbar navbar-expand-lg navbar-light bg-light">
               <a class="cuerpoLinkInicio navbar-brand text-success p-3 mb-2" href="#">Inicio</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,15 +43,15 @@
                       <a class="cuerpoLink mx-3 p-3 mb-2 " href="documental.html">Documental</a>
                   </li>
                   <li class="nav-item mx-3" p-3 mb-2>
-                      <a class="cuerpoLink nav-link disabled " href="#" tabindex="-1" aria-disabled="true">Proximamente Mas</a>
+                      <a class=" nav-link disabled " href="#" tabindex="-1" aria-disabled="true">Proximamente Mas</a>
                   </li>
               </ul>
               </div>
           </nav>
 
           <!--info izquierda-->
-          <!---->
 
+          <div class="cuerpoInter">
       <sección class="cuerpoInfo row text-center"> 
               <article class="ariculoUno col-md-12 col-xl-3 p-3 mb-2">
                   <img src="media/b.png " class="wow animate__animated animate__backInLeft" alt="auto retrato de vincenta van gogh">
@@ -53,7 +60,7 @@
                   <li class="font-li">Año de muerte : 1890</li>
                   <li class="font-li">País: Holanda</li>
               </ul>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/a79hJEGjYfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" autoplay position: absolute center mute></iframe>
+              <iframe width="160" src="https://www.youtube.com/embed/a79hJEGjYfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       <P>Ve a documental para verlo completamente</P>
                            <div id="carouselExampleCaptions" class="carousel slide col-md-3  col-xl-12 mx-auto container-fluid" data-ride="carousel" >
                                   <ol class="carousel-indicators">
@@ -64,41 +71,43 @@
                                     <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
                                     <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
                                   </ol>
-                                  <div class="carousel-inner">
+
+                      <!--Carrusel-->
+
+                <div class="carousel-inner">
                                     <div class="carousel-item active" style="width: max-content 100px;">
                                       <img src="media/Árbol golpeado por el viento 1883.png" class="d-block w-100" alt="Árbol golpeado por el viento 1883 van gogh ">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="font-h5">Árbol golpeado por el viento 1883</h5>
+
                                       </div>
                                     </div>
                                     <div class="carousel-item">
                                       <img src="media/Los comedores de patatas1885.png" class="d-block w-100" alt="Los comedores de patatas 1885 van gogh">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="font-h5">Los comedores de patatas 1885 </h5>
+
                                       </div>
                                     </div>
                                     <div class="carousel-item">
                                       <img src="media/Corona imperial en un jarrón de cobre 1887.png" class="d-block w-100" alt="Corona imperial en un jarrón de cobre 1887 van gogh">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="font-h5">Corona imperial en un jarrón de cobre 1887</h5>
+
                                       </div>
                                     </div>
                                     <div class="carousel-item">
                                       <img src="media/nocheEstrellada1888.png" class="d-block w-100" alt="nocheEstrellada 1888 van gogh">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="font-h5">Noche Estrellada 1888</h5>
+
                                       </div>
                                     </div>
                                     <div class="carousel-item">
                                       <img src="media/Terraza de café por la noche 1888.png" class="d-block w-100" alt="Terraza de café por la noche 1888 van gogh">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5 class="font-h5">Terraza de café por la noche 1888</h5>
+
                                   </div>
                               </div>
                                   <div class="carousel-item">
                                       <img src="media/Autorretrato 1889.png" class="d-block w-100" alt="Autorretrato 1889 van gogh">
                                       <div class="carousel-caption d-none d-md-block">
-                                        <h5  class="font-h5">Autorretrato 1889</h5>
                                       </div>
                                   </div>
                                   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -114,7 +123,9 @@
                           </article>
 
               <!--info derecha-->
-                <article class="col-md-12 col-xl-9 p-3 mb-2 ariculoDos">
+
+            <article class="col-md-12 col-xl-9 p-3 mb-2 ariculoDos">
+              
                 <p>Vincent van Gogh, por quien el color era el símbolo principal de expresión, nació el 30 de marzo de 1853 en Groot-Zundert de Holanda. El hijo de un pastor, criado en una atmósfera religiosa y refinada, Vincent era muy emocional y no tenía confianza en sí mismo. Entre 1860 y 1880, cuando decidió finalmente ser artista, Van Gogh había tenido dos amores inadecuados y infelices y había trabajado sin éxito como empleado en una librería, vendedor de arte, y predicador en Le Borinage (una región aburrida de minera en Bélgica), donde fue despedido por “exceso de celo.”</p>
                 <p>Se quedó en Bélgica a estudiar el arte, dedicado para dar felicidad creando belleza. Las obras de este período temprano en Holanda son pinturas de género muy iluminadas y de tonos sombríos de las que la más famosa es Los comedores de papas (1885). En ese año Van Gogh fue a Antwerp donde descubrió las obras de Rubens y compró muchos grabados japoneses.</p>
                 <p>En 1886 fue a París para unirse con su hermano Theo, el director de la Galería de Goupil. En París, Van Gogh estudió con Cormon, conoció inevitablemente a Pissarro, Monet, y Gauguin, y empezó a dar más luz a su paleta muy oscura y pintar en las brochadas cortas de los impresionistas. Su temperamento nervioso le hizo un compañero difícil y las discusiones que duraron toda la noche, en combinación con pintando todo el día, afectaron a su salud.</p>
@@ -124,44 +135,22 @@
             </article>
           </sección>
 
-          <!--Pie de pag-->
-                  <footer class="piePag">
-                      <nav class="navbar navbar-light bg-light container col-12 pie__pag--nav">
-                        <button type="button" class="btn btn-primary font-button" data-toggle="modal" data-target="#staticBackdrop">
-                          ¿Quiénes somos?
-                        </button>
-                        <button type="button" class="btn btn-primary font-button" data-toggle="modal" data-target="#staticBackdrop">
-                          Contáctanos
-                        </button>
-                        <button type="button" class="btn btn-primary font-button" data-toggle="modal" data-target="#staticBackdrop">
-                          Términos y condiciones
-                        </button>
-                      </nav>
-                  </footer>
-                </div>
-              </div>
+          
         </div>
-    </div>
-  </div>
-<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      Sepa entender, por ahora no estamos.  mayor q 3
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <!--Pie de pag-->
 
-    </div>
-  </div>
-</div>
-</div>
+          <footer class="piePag">
+            <nav class="navbar"></nav>
+                <ul class="navbar-nav">
+                  <li class="nav-item navCambio">
+                    <a class="nav-link" href="sobre.html">Esta pagina y comunicate</a>
+                  </li>
+                </ul>
+            </nav>
+          </footer>
+
+            <!--detalles-->
+
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
